After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753694 - GtkListBox: Assumes all focusable widgets are GtkListBoxRow widgets
GtkListBox: Assumes all focusable widgets are GtkListBoxRow widgets
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-08-16 18:37 UTC by Bastian Ilsø
Modified: 2015-08-22 00:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Polari use case for having focusable widget as GtkListBox header. (96.05 KB, image/png)
2015-08-16 18:37 UTC, Bastian Ilsø
Details
Backtrace of the crash (16.86 KB, text/plain)
2015-08-16 18:42 UTC, Florian Müllner
Details

Description Bastian Ilsø 2015-08-16 18:37:48 UTC
Created attachment 309374 [details]
Polari use case for having focusable widget as GtkListBox header.

At the moment GtkListBox assumes all focusable widgets are of type GtkListBoxRow. If I make GtkListBox headers of type GtkButton which is focusable, then it does not seem possible to focus it using tab. If the button is clicked it does receives focus, but pressing tab will then crash the application.

If focusable widget in the header of GtkListBox are unsupported/expected to break, that should at least be documented.

If it helps, the attached screenshot shows the use case in Polari - The header is a button which becomes sensitive in event of error in which it can be clicked and detailed error information can be shown.
Comment 1 Florian Müllner 2015-08-16 18:42:37 UTC
Created attachment 309375 [details]
Backtrace of the crash
Comment 2 Matthias Clasen 2015-08-16 22:39:14 UTC
I don't think focusable headers have been considered by anybody - the only cases I've seen for headers are separators or labels.